Fix Dark Theme Toggle

--- a/assets/css/main_dark.scss
+++ b/assets/css/main_dark.scss
@@ -5,7 +5,7 @@ search: false
 
 @charset "utf-8";
 
-@import "minimal-mistakes/skins/default"; // skin
+@import "minimal-mistakes/skins/dark";
 @import "minimal-mistakes"; // main partials
 
 @import url('//cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css');
