--- a/_sass/custom/_toggle.scss
+++ b/_sass/custom/_toggle.scss
@@ -1,6 +1,6 @@
-.toggle {
-  display: none;
-  + .toggle_btn {
+.dark_toggle {
+  appearance: none;
+  + .dark_toggle_btn {
       box-sizing: border-box;
       outline: 0;
       display: block;
@@ -13,6 +13,10 @@
       padding: 2px;
       transition: all 0.4s ease;
       font-size: 1em;
+
+      &:hover {
+        box-shadow: 0 0 0 max(4px, 0.2em) lightgray;
+      }
 
       &:after {
           position: relative;
@@ -30,15 +34,15 @@
       background: lightgray;
       &:after {
           left: 0;
-          content: "brightness_7";
+          content: "";
       }
   }
 
-  &:checked + .toggle_btn {
-      background: gray;
+  &:checked + .dark_toggle_btn {
+      background: #00adb5;
       &:after {
           left: 50%;
-          content: "brightness_4";
+          content: "";
       }
   }
 }
