Add Dark theme toggle symbols

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -27,7 +27,7 @@
         <!--Dark Theme-->
         {% if site.dark_theme_toggle == true %}
         <input id="toggle_dark_theme" class="dark_toggle" type="checkbox">
-        <label for="toggle_dark_theme" class="dark_toggle_btn"></label>
+        <label for="toggle_dark_theme" class="material-symbols-outlined dark_toggle_btn"></label>
         {% endif %}
         <button class="greedy-nav__toggle hidden" type="button">
           <span class="visually-hidden">{{ site.data.ui-text[site.locale].menu_label | default: "Toggle menu" }}</span>
