--- a/_sass/minimal-mistakes/_mixins.scss
+++ b/_sass/minimal-mistakes/_mixins.scss
@@ -2,6 +2,8 @@
    MIXINS
    ========================================================================== */
 
+@use "sass:math";
+
 %tab-focus {
   /* Default*/
   outline: thin dotted $focus-color;
@@ -65,7 +67,7 @@
   $green: green($color);
   $blue: blue($color);
 
-  $yiq: (($red*299)+($green*587)+($blue*114))/1000;
+  $yiq: math.div((($red*299)+($green*587)+($blue*114)), 1000);
 
   @if $yiq-debug { @debug $yiq, $threshold; }
 
