--- a/_sass/minimal-mistakes/_mixins.scss
+++ b/_sass/minimal-mistakes/_mixins.scss
@@ -67,7 +67,7 @@
   $green: green($color);
   $blue: blue($color);
 
-  $yiq: math.div((($red*299)+($green*587)+($blue*114)), 1000);
+  $yiq: calc( (($red*299) + ($green*587) + ($blue*114)) / 1000 );
 
   @if $yiq-debug { @debug $yiq, $threshold; }
 
