--- a/_sass/minimal-mistakes/_mixins.scss
+++ b/_sass/minimal-mistakes/_mixins.scss
@@ -2,8 +2,6 @@
    MIXINS
    ========================================================================== */
 
-@use "sass:math";
-
 %tab-focus {
   /* Default*/
   outline: thin dotted $focus-color;
@@ -67,7 +65,7 @@
   $green: green($color);
   $blue: blue($color);
 
-  $yiq: calc( (($red*299) + ($green*587) + ($blue*114)) / 1000 );
+  $yiq: (($red*299) + ($green*587) + ($blue*114)) / 1000 ;
 
   @if $yiq-debug { @debug $yiq, $threshold; }
 
